[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenoj/libro.gd" type="Script" id=1]
[ext_resource path="res://ui/UIEtoso.tres" type="Theme" id=2]
[ext_resource path="res://ui/tiparoj/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/tiparoj/modernpics.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

size = 32
use_filter = true
font_data = ExtResource( 4 )

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 976.31 )
color = Color( 1, 1, 1, 0.427451 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -508.0
margin_right = 360.0
margin_bottom = 508.0

[node name="TopMenu" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 32.0

[node name="Maldekstra" type="HBoxContainer" parent="VBoxContainer/TopMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 684.23
margin_bottom = 32.0
rect_min_size = Vector2( 684.23, 0 )
mouse_filter = 0

[node name="Konservi" type="Button" parent="VBoxContainer/TopMenu/Maldekstra"]
margin_right = 112.94
margin_bottom = 32.0
rect_min_size = Vector2( 112.94, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "KONSERVI"

[node name="Sxargi" type="Button" parent="VBoxContainer/TopMenu/Maldekstra"]
margin_left = 116.0
margin_right = 196.28
margin_bottom = 32.0
rect_min_size = Vector2( 80.28, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "ŜARGI"

[node name="Button5" type="Button" parent="VBoxContainer/TopMenu/Maldekstra"]
margin_left = 200.0
margin_right = 260.32
margin_bottom = 32.0
rect_min_size = Vector2( 60.32, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "("

[node name="Button4" type="Button" parent="VBoxContainer/TopMenu/Maldekstra"]
margin_left = 264.0
margin_right = 324.32
margin_bottom = 32.0
rect_min_size = Vector2( 60.32, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TopMenu"]
margin_left = 688.0
margin_right = 718.0
margin_bottom = 32.0

[node name="Button2" type="Button" parent="VBoxContainer/TopMenu/HBoxContainer3"]
margin_right = 30.86
margin_bottom = 32.0
rect_min_size = Vector2( 30.86, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="Tvino" type="Tween" parent="VBoxContainer/TopMenu"]

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 720.0
margin_bottom = 1036.0
rect_min_size = Vector2( 720, 1000 )
theme = ExtResource( 2 )
text = "Estis lundo, la plej taŭga tago por ĝui bieron kaj li sidis en la plej taŭga loko por fari ĝuste tion. Bierfarejo. Plene da vivo, homoj pretere ebripaŝis unu la alian, foje hazarde batis iun iu, bataleto per furiozaj manoj pri vireco komenciĝis. Iu perdis dentojn, iu memfidon, la vivo estas tia, sed foje iu ion eĉ gajnis, okulon ekzemple, sed la okulujon malfacile oni prenis. La kelnerino kiu mem drinkis kaj tamen kapablis senprobleme funkcii la tutan nokton neniam estis petita, ĉiu sciis ke ŝi donos la bieron tie kie kaj kiam ĝi mankos. Ŝi ĉiam havis respekton de aliaj. Malgraŭ ŝia malĝentila personeco ŝi estis ŝatata de plajparto kaj amita de la aliaj. Ŝi moviĝis tra la tabloj flue kaj lerte, donancante bieron kaj ordojn al la senkiale kantantaj feliĉuloj. Estis piedo kie ĝi certe ne mankus se ne estus tie kaj ŝi ekfalis. Ŝia vivo elsaltis la kapon kaj forkuris kaj ne nur ĝi vidis ke planke kuŝis forgesita ferboto. “Akra” ŝi rimarkis kaj ŝia falo malrapidigita per adrenalino daŭrigis. Ŝi fermis siajn okulojn kaj klopodis akcepti la morton. La fino de ĉio venas.
“Du bieroj mi petas, ĉar la unuan mi fortrinkos pli rapide ol ricevos!” diris Lumitono memfide enirante la drinkejon. La kelnerino sentis sin bone, pensis ke fino jam venis kal malfermis la okulojn, estis la drinkejo denove, “se la ĉielo estasĉ tia, la inferon mi petas!” ŝi kriis laŭte kaj senĉese rigardis plafonen. Ĉiuj rigardis ŝin iom timeme, finfine, kiu ne timus virnon de ŝiaj proporcioj kiu petas esti ĵetita al la infero de la Dio. Laŭte. “Ne estas al ĉielo, mi certigas vin” iom feliĉe, iom malice flustris Lumitono, irante al la tablo plej proksima al la verŝtablo, kaj antaŭ li eksidis li aldonis:”kaj bonvolu, ne venigi ajnan Dion. Ili prenas pli ol donas.” li serioziĝis, sidiĝis kaj atendis la bierojn. La kelnerino"
highlight_current_line = true
show_line_numbers = true
breakpoint_gutter = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.37

[node name="Dosierujo" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -202.635
margin_right = 360.0
margin_bottom = 202.635
rect_min_size = Vector2( 200, 405.27 )
window_title = "Konservi dosieron"
access = 2
current_dir = "/Users/oneironauto/Documents/Godot_Projects/Gardener"
current_path = "/Users/oneironauto/Documents/Godot_Projects/Gardener/"

[connection signal="mouse_entered" from="VBoxContainer/TopMenu" to="." method="_on_HBoxContainer_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/TopMenu/Maldekstra/Konservi" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/TopMenu/Maldekstra/Sxargi" to="." method="_on_Sxargi_pressed"]
[connection signal="pressed" from="VBoxContainer/TopMenu/HBoxContainer3/Button2" to="." method="_on_Button2_pressed"]
[connection signal="dir_selected" from="Dosierujo" to="." method="_on_FileDialogue_dir_selected"]
[connection signal="file_selected" from="Dosierujo" to="." method="_on_FileDialogue_file_selected"]
